<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessPartnerWizard">

    <Button
        android:id="@+id/id_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="279dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="518dp"
        android:text="@string/msg_New"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="431dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/code"
        android:inputType="number"
        android:maxLength="20"
        android:singleLine="false"
        android:text="@string/code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="364dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Name"
        android:maxLength="20"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Value"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/Name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="289dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name2"
        android:maxLength="20"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/C_BP_Group_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bc_threadlist_contact_profile_img_max_size"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="210dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/group_business_partner"
        android:maxLength="25"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name2"
        android:autofillHints="" tools:targetApi="o"/>
</android.support.constraint.ConstraintLayout>